overflow fix

--- a/css/2025-portfolio-922841.webflow.css
+++ b/css/2025-portfolio-922841.webflow.css
@@ -161,17 +161,17 @@
 .heading {
   color: #fffc;
   margin-top: 15px;
-  font-family: Canelatext, Times New Roman, sans-serif;
+  font-family: Open Sans, sans-serif;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .chime-phone {
   object-fit: scale-down;
-  background-image: url('../images/chime-misc-bg.png');
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: auto 70%;
+  background-image: none;
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: auto;
   width: 100%;
   max-width: 100%;
   height: 75%;
@@ -183,9 +183,11 @@
 }
 
 .chime-phone-image {
+  z-index: 2;
   object-fit: scale-down;
   width: auto;
   height: 100%;
+  position: relative;
 }
 
 .dropbox-devices {
@@ -618,9 +620,8 @@
 }
 
 .nav-bg {
-  -webkit-backdrop-filter: brightness(99%) contrast(135%) blur(20px);
-  backdrop-filter: brightness(99%) contrast(135%) blur(20px);
-  background-image: linear-gradient(#000, #0000004d);
+  -webkit-backdrop-filter: contrast(200%) brightness(55%) blur(20px);
+  backdrop-filter: contrast(200%) brightness(55%) blur(20px);
   width: 100%;
   height: 65px;
   position: fixed;
@@ -738,10 +739,32 @@
   display: flex;
 }
 
+.chime-background-image {
+  object-fit: scale-down;
+  width: 100%;
+  max-width: 1200px;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  position: relative;
+  top: -90%;
+  left: .5%;
+}
+
 @media screen and (max-width: 991px) {
+  .section-project.chime, .section-project.dropbox, .section-project.tailor {
+    overflow: clip;
+  }
+
   .section-project.yelp {
     background-image: radial-gradient(circle closest-side at 50% 40%, var(--yelp-red), black);
     height: 100%;
+    overflow: clip;
+  }
+
+  .chime-phone {
+    overflow: clip;
   }
 
   .gradient-wrapper {
@@ -774,8 +797,18 @@
     margin-left: -10%;
   }
 
+  .yelp-phone, .yelp-keyboard, .yelp-screen {
+    overflow: visible;
+  }
+
   .footer-headline {
     font-size: 40px;
+  }
+
+  .chime-background-image {
+    object-fit: scale-down;
+    height: 90%;
+    left: 0%;
   }
 }
 
@@ -826,6 +859,11 @@
     line-height: 30px;
   }
 
+  .chime-phone-image {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .hero-container {
     background-image: linear-gradient(#00000030 13%, #0009 56%, #000);
   }
@@ -867,8 +905,20 @@
     margin-left: -5%;
   }
 
-  .dropbox-phone-1, .dropbox-phone-2 {
-    margin-left: 0;
+  .yelp-phone, .yelp-screen, .tailor-image, .tailor-image.left {
+    overflow: visible;
+  }
+
+  .dropbox-phone-1 {
+    margin-left: -96px;
+  }
+
+  .dropbox-phone-2 {
+    margin-left: -57px;
+  }
+
+  .dropbox-tablet {
+    margin-left: -50px;
   }
 
   .sg-devices-seperate {
@@ -877,6 +927,12 @@
 
   .nav-bar {
     height: 50px;
+  }
+
+  .nav-bg {
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    background-image: linear-gradient(#000, #0000001a);
   }
 
   .footer-section {
@@ -891,6 +947,13 @@
 
   .footer-headline {
     font-size: 40px;
+  }
+
+  .chime-background-image {
+    width: 150%;
+    height: 90%;
+    display: none;
+    left: -23%;
   }
 }
 
